--- a/TwoViewsApp/Base.lproj/Main.storyboard
+++ b/TwoViewsApp/Base.lproj/Main.storyboard
@@ -1,24 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TwoViewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Loy-pu-7yz" userLabel="greenView">
+                                <rect key="frame" x="20" y="62" width="374" height="387"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ODW-rp-TjH" userLabel="redView">
+                                <rect key="frame" x="20" y="475" width="374" height="387"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="sEI-kc-n42"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ODW-rp-TjH" firstAttribute="top" secondItem="Loy-pu-7yz" secondAttribute="bottom" constant="26" id="4t6-eS-RJo"/>
+                            <constraint firstItem="Loy-pu-7yz" firstAttribute="top" secondItem="sEI-kc-n42" secondAttribute="top" constant="18" id="7xo-hb-LnI"/>
+                            <constraint firstItem="Loy-pu-7yz" firstAttribute="leading" secondItem="sEI-kc-n42" secondAttribute="leading" constant="20" id="BgD-tS-xjF"/>
+                            <constraint firstItem="ODW-rp-TjH" firstAttribute="bottom" secondItem="sEI-kc-n42" secondAttribute="bottom" id="Bo8-tq-2wl"/>
+                            <constraint firstItem="sEI-kc-n42" firstAttribute="trailing" secondItem="Loy-pu-7yz" secondAttribute="trailing" constant="20" id="Ofr-Iy-1HJ"/>
+                            <constraint firstItem="ODW-rp-TjH" firstAttribute="height" secondItem="Loy-pu-7yz" secondAttribute="height" id="sf0-VE-FLc"/>
+                            <constraint firstItem="sEI-kc-n42" firstAttribute="trailing" secondItem="ODW-rp-TjH" secondAttribute="trailing" constant="20" id="u2s-al-8O0"/>
+                            <constraint firstItem="ODW-rp-TjH" firstAttribute="leading" secondItem="sEI-kc-n42" secondAttribute="leading" constant="20" id="vZU-cd-tJ1"/>
+                            <constraint firstItem="ODW-rp-TjH" firstAttribute="width" secondItem="Loy-pu-7yz" secondAttribute="width" id="ypb-Oh-Cze"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="126.08695652173914" y="-38.169642857142854"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
